--- a/ME22B214.ipynb
+++ b/ME22B214.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "b738de6b",
    "metadata": {},
    "outputs": [
@@ -2083,14 +2083,12 @@
    "source": [
     "# ---------------------------------------------------------------\n",
     "# Create ordinal 3-class mask\n",
-    "#    low:   0–3\n",
-    "#    mid:   4–7\n",
-    "#    high:  8–10\n",
+    "#    low:   0–5\n",
+    "#    high:  6–10\n",
     "# ---------------------------------------------------------------\n",
     "def make_ordinal_mask(y):\n",
     "    mask = np.zeros_like(y, dtype=int)\n",
-    "    mask[y >= 4] = 1\n",
-    "    mask[y >= 8] = 2\n",
+    "    mask[y >= 6] = 1\n",
     "    return mask\n",
     "\n",
     "\n",
@@ -2107,8 +2105,8 @@
     "# LightGBM multiclass + calibration\n",
     "# ---------------------------------------------------------------\n",
     "clf_lgb = lgb.LGBMClassifier(\n",
-    "    objective=\"multiclass\",\n",
-    "    num_class=3,\n",
+    "    objective=\"binary\",\n",
+    "    num_class=2,\n",
     "    n_estimators=500,\n",
     "    learning_rate=0.1,\n",
     "    num_leaves=31,\n",
@@ -2125,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "9a9061b5",
    "metadata": {},
    "outputs": [
@@ -2830,23 +2828,20 @@
     "#     )\n",
     "\n",
     "reg_low  = make_regressor()\n",
-    "reg_mid  = make_regressor()\n",
     "reg_high = make_regressor()\n",
     "\n",
     "reg_low.fit (X_train[y_class_train==0], y_train[y_class_train==0])\n",
-    "reg_mid.fit (X_train[y_class_train==1], y_train[y_class_train==1])\n",
-    "reg_high.fit(X_train[y_class_train==2], y_train[y_class_train==2])\n",
+    "reg_high.fit(X_train[y_class_train==1], y_train[y_class_train==1])\n",
     "\n",
     "# ---------------------------------------------------------------\n",
     "# Soft mixture prediction on validation set\n",
     "# ---------------------------------------------------------------\n",
     "pred_low  = reg_low.predict(X_val)\n",
-    "pred_mid  = reg_mid.predict(X_val)\n",
     "pred_high = reg_high.predict(X_val)\n",
     "\n",
-    "pL, pM, pH = P_val[:,0], P_val[:,1], P_val[:,2]\n",
+    "pL, pH = P_val[:,0], P_val[:,1]\n",
     "\n",
-    "pred_val_moe = pL * pred_low + pM * pred_mid + pH * pred_high\n",
+    "pred_val_moe = pL * pred_low + pH * pred_high\n",
     "print(\"MoE RMSE (uncalibrated):\", root_mean_squared_error(y_val, pred_val_moe))\n",
     "\n",
     "# ---------------------------------------------------------------\n",
@@ -2923,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f7eb9695",
    "metadata": {},
    "outputs": [],
@@ -2932,12 +2927,11 @@
     "# Predict on test set\n",
     "# ---------------------------------------------------------------\n",
     "pred_low_t  = reg_low.predict(X_feat_test)\n",
-    "pred_mid_t  = reg_mid.predict(X_feat_test)\n",
     "pred_high_t = reg_high.predict(X_feat_test)\n",
     "\n",
-    "pL_t, pM_t, pH_t = P_test[:,0], P_test[:,1], P_test[:,2]\n",
+    "pL_t, pH_t = P_test[:,0], P_test[:,1]\n",
     "\n",
-    "pred_test_moe = pL_t * pred_low_t + pM_t * pred_mid_t + pH_t * pred_high_t\n",
+    "pred_test_moe = pL_t * pred_low_t + pH_t * pred_high_t\n",
     "pred_test_cal = iso.transform(pred_test_moe)\n",
     "pred_test_cal = np.clip(pred_test_cal, 0, 10)"
    ]
